--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>motobudzetapi</module>
         <module>commons</module>
+        <module>mailing-service</module>
     </modules>
 
     <name>mb-project</name>
@@ -44,10 +45,6 @@
                 <version>${spring.boot.dependencies.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-validation</artifactId>
             </dependency>
         </dependencies>
     </dependencyManagement>
