email service handled properly through kafka queue with email type enum param , facade exported to adapter directory , also for file manager , slight change in neon text , old basic security file removed,

--- a/mailing-service/src/main/resources/application.yml
+++ b/mailing-service/src/main/resources/application.yml
@@ -43,3 +43,7 @@ management:
     metrics:
       export:
         enabled: true
+
+email-service:
+  url: https://motobudzet.pl
+  email-address: info@motobudzet.pl
