--- a/motobudzetapi/pom.xml
+++ b/motobudzetapi/pom.xml
@@ -44,10 +44,6 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
             <scope>test</scope>
         </dependency>
@@ -83,6 +79,12 @@
 
         <!--@@@@@@@@@@@@@@@@@@@@@@@@@ TRACING & LOGGING @@@@@@@@@@@@@@@@@@@@@@@@@@-->
 
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing</artifactId>
+            <version>1.2.1</version>
+        </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
