--- a/mailing-service/src/main/resources/application-prod.yml
+++ b/mailing-service/src/main/resources/application-prod.yml
@@ -55,5 +55,5 @@ management:
         enabled: true
 
 email-service:
-  url: http://localhost:20134
+  url: https://motobudzet.pl
   email-address: info@motobudzet.pl
