--- a/mailing-service/src/main/resources/application.yml
+++ b/mailing-service/src/main/resources/application.yml
@@ -55,5 +55,5 @@ management:
         enabled: true
 
 email-service:
-  url: https://motobudzet.pl
+  url: http://localhost:20134
   email-address: info@motobudzet.pl
