--- a/motobudzetapi/src/main/resources/application-prod.yml
+++ b/motobudzetapi/src/main/resources/application-prod.yml
@@ -37,7 +37,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         generate_statistics: false
-        show_sql: true
+        show_sql: false
         hbm2ddl:
           auto: none
   #          auto: create-drop
